<resources>
    <string name="app_name">Product Management</string>

    <string name="loading_message">Loading</string>

    <string name="signin_label">Welcome</string>
    <string name="signin_email">Email</string>
    <string name="signin_password">Password</string>
    <string name="signin_button">Sign in</string>
    <string name="signin_create_account">I don\'t have an account</string>

    <string name="signup_label">Create account</string>
    <string name="signup_store_name">Store Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_cnpj">CNPJ</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm Password</string>
    <string name="signup_button">Sign up</string>

    <string name="product_label">Register new product</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="product_amount">Amount</string>
    <string name="product_create_button">Register</string>

    <string name="product_details_label">Product Details</string>
    <string name="product_details_label_name">Name</string>
    <string name="product_details_label_price">Price</string>
    <string name="product_details_label_amount">Amount</string>
    <string name="product_details_delete_button">Delete product</string>

    <string name="product_update_label">Edit product</string>
    <string name="product_update_name">Name</string>
    <string name="product_update_price">Price</string>
    <string name="product_update_amount">Amount</string>
    <string name="product_update_button">Update product</string>

    <string name="about_label">About</string>
    <string name="about_dev_label">Developers</string>
    <string name="about_dev_value_1">Leonardo Andrade dos Santos</string>
    <string name="about_dev_value_2">Matheus Tadeu</string>
    <string name="about_version_label">App version</string>
    <string name="about_version_value">1.0.0</string>

    <string name="toaster_product_created_succcess">Product was created</string>
    <string name="toaster_product_created_error">Error to create product</string>
    <string name="toaster_product_updated_succcess">Product was updated</string>
    <string name="toaster_product_updated_error">Error to update product</string>
    <string name="toaster_product_delete_succcess">Product was deleted</string>
    <string name="toaster_product_delete_error">Error to delete product</string>
</resources>