<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivAboutBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/back_button_margin_left"
        android:layout_marginTop="@dimen/back_button_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

    <TextView
        android:id="@+id/tvAboutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_margin_left"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/about_label"
        android:textColor="@color/greyColor"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toEndOf="@+id/ivAboutBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="@dimen/logo_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutLabel"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvDevLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/element_margin_left"
        android:layout_marginTop="@dimen/about_title_margin_top"
        android:text="@string/about_dev_label"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/about_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvDevValue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/element_margin_left"
        android:layout_marginTop="@dimen/about_value_margin_top"
        android:textColor="@color/greyColor"
        android:text="@string/about_dev_value_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDevLabel" />

    <TextView
        android:id="@+id/tvDevValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/element_margin_left"
        android:layout_marginTop="@dimen/about_value_margin_top"
        android:text="@string/about_dev_value_2"
        android:textColor="@color/greyColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDevValue1" />

    <TextView
        android:id="@+id/tvVersionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/element_margin_left"
        android:layout_marginTop="@dimen/about_second_title_margin_top"
        android:text="@string/about_version_label"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/about_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDevValue2" />

    <TextView
        android:id="@+id/tvVersionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/element_margin_left"
        android:layout_marginTop="@dimen/about_value_margin_top"
        android:text="@string/about_version_value"
        android:textColor="@color/greyColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVersionLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>