<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSignupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/back_button_margin_left"
        android:layout_marginTop="@dimen/title_margin_top"
        android:textSize="@dimen/title_text_size"
        android:text="@string/signup_label"
        android:textColor="@color/greyColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:hint="@string/signup_store_name"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tvSignupLabel"
        tools:layout_editor_absoluteX="@dimen/text_input_x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignupStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:hint="@string/signup_cnpj"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
        tools:layout_editor_absoluteX="@dimen/text_input_x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignupCnpj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="14"
            android:textColor="@color/blackColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:hint="@string/signup_email"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout12"
        tools:layout_editor_absoluteX="@dimen/text_input_x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/blackColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:hint="@string/signup_password"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout11"
        tools:layout_editor_absoluteX="@dimen/text_input_x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/blackColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:hint="@string/signup_confirm_password"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout10"
        tools:layout_editor_absoluteX="@dimen/text_input_x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignupConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/blackColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:text="@string/signup_button"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" />


</androidx.constraintlayout.widget.ConstraintLayout>