<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_email_sign_in"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:hint="@string/signin_email"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="@dimen/text_input_x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/blackColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:hint="@string/signin_password"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
        tools:layout_editor_absoluteX="@dimen/text_input_x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/blackColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:text="@string/signin_button"
        app:layout_constraintTop_toBottomOf="@+id/password_text_input"
        tools:layout_editor_absoluteX="@dimen/text_input_x" />

    <TextView
        android:id="@+id/tvLoginCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:text="@string/signin_create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>