<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivProductBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/back_button_margin_left"
        android:layout_marginTop="@dimen/back_button_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_chevron_left_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_margin_left"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/product_label"
        android:textColor="@color/greyColor"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintStart_toEndOf="@+id/ivProductBackButton"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:hint="@string/product_name"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="@dimen/text_input_x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:hint="@string/product_price"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:layout_editor_absoluteX="@dimen/text_input_x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/blackColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:hint="@string/product_amount"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        tools:layout_editor_absoluteX="@dimen/text_input_x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProductAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/blackColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btProductAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_input_margin_top"
        android:layout_marginStart="@dimen/text_input_margin_left"
        android:layout_marginEnd="@dimen/text_input_margin_rigth"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/product_create_button"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:layout_editor_absoluteX="@dimen/text_input_x" />

</androidx.constraintlayout.widget.ConstraintLayout>